# SurfExtract

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindCub.cmake  FindGlew.cmake  FindGlfw3.cmake  FindOpenCV.cmake
data/models/: Panametrics_UT_v5.mtl  Rubber_Duck_02.mtl
src/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  FileUtils.h  FileUtilsExt.cpp  FileUtilsExt.h  GLNormalsRenderer.cpp  GLNormalsRenderer.h  GLPointCloudRenderer.cpp  GLPointCloudRenderer.h  GLRenderer.cpp  GLRenderer.h  GLSLSource.h  GeometryCheckup.cpp  GeometryCheckup.h  ImageWriter.cpp  ImageWriter.h  LoaderOBJ.cpp  LoaderOBJ.h  Mat2Normals.cpp  Mat2Normals.h  Mat2Points.cpp  Mat2Points.h  MatHelpers.h  MatrixFileUtils.cpp  MatrixFileUtils.h  MatrixHelpers.h  PointCloudAssembly.cpp  PointCloudAssembly.h  PolyhedronGeometry.cpp  PolyhedronGeometry.h  PolyhedronViewRenderer.cpp  PolyhedronViewRenderer.h  ReaderWriter.h  ReaderWriterOBJ.cpp  ReaderWriterOBJ.h  ReaderWriterPCD.cpp  ReaderWriterPCD.h  ReaderWriterPLY.cpp  ReaderWriterPLY.h  (+10 more)
src/tests/: CMakeLists.txt  PointCloudEval.cpp  PointCloudEval.h  RandomNumbers.cpp  RandomNumbers.h  TestPointCloudGen.cpp  TestPointCloudGen.h  main_test.cpp
